fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 #root {
-  width: 100vw;
-  height: 100vh;
   background-color: black;
   background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 40%, #2b2b2b 100%);
 }
