--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 
 body,
-html {
+html,
+#root {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
